v0.14.1/_sources/projections/conic/conic_albers.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/conic/conic_albers.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_conic_conic_albers.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_conic_conic_albers.py:


Albers conic equal-area projection
==================================

This projection, developed by Heinrich C. Albers in 1805, is predominantly used
to map regions of large east-west extent, in particular the United States. It
is a conic, equal-area projection, in which parallels are unequally spaced arcs
of concentric circles, more closely spaced at the north and south edges of the
map. Meridians, on the other hand, are equally spaced radii about a common
center, and cut the parallels at right angles. Distortion in scale and shape
vanishes along the two standard parallels. Between them, the scale along
parallels is too small; beyond them it is too large. The opposite is true for
the scale along meridians.

**b**\ *lon0/lat0*\ /\ *lat1/lat2*\ */scale*
or **B**\ *lon0/lat0*\ /\ *lat1/lat2*\ */width*

The projection is set with **b** or **B**. The projection center is set by
*lon0/lat0* and two standard parallels for the map are set with *lat1/lat2*.
The figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 24-36



.. image-sg:: /projections/conic/images/sphx_glr_conic_albers_001.png
   :alt: conic albers
   :srcset: /projections/conic/images/sphx_glr_conic_albers_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    # Use the ISO country code for Brazil and add a padding of 2 degrees (+R2)
    fig.coast(
        region="BR+R2",
        projection="B-55/-15/-25/0/12c",
        frame="afg",
        land="seagreen",
        water="gray90",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.306 seconds)


.. _sphx_glr_download_projections_conic_conic_albers.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: conic_albers.ipynb <conic_albers.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: conic_albers.py <conic_albers.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: conic_albers.zip <conic_albers.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
